[project]
name = "summarizer-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.3",
    "langchain-classic>=1.0.1",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.1",
    "python-dotenv>=1.2.1",
    "pytube>=15.0.0",
    "streamlit>=1.52.2",
    "transformers>=4.57.3",
    "unstructured>=0.18.27",
    "validators==0.28.1",
    "youtube-transcript-api>=1.2.3",
]
